# readme-flat

./: .gitignore  CHANGELOG.md  README.md  README_deployment.md  deploy.sh  pyproject.toml  requirements.txt  setup.py
docs/: AGENTS.md  CLAUDE.md
scripts/: .syncthing.n8n_runner.py.tmp  install.sh  n8n_runner.py  n8n_workflow_args_file.json  setup_env.sh
scripts/macos/launchd/: com.readme-sync.daemon.plist.template
src/readme_sync/: __init__.py  cli.py  config.py  daemon.py  database.py  main.py  scanner.py  sync_engine.py  utils.py  watcher.py
src/readme_sync/core/: scanner.py  sync_engine.py
src/readme_sync/services/: autostart.py  config.py  config.sync-conflict-20250718-155452-YOXBV6C.py  daemon.py  database.py  database.sync-conflict-20250718-155452-YOXBV6C.py  watcher.py
test_env/: config.yaml  map1.json  run1.json  run2.json  run3.json  run4.json
